Refactoring project to use MVP pattern.

--- a/src/CBDesktopUI/CBDesktopUI.csproj
+++ b/src/CBDesktopUI/CBDesktopUI.csproj
@@ -91,26 +91,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccess\Person.cs" />
-    <Compile Include="DataAccess\ComboBox.cs" />
-    <Compile Include="MainPanel.cs">
+    <Compile Include="Presenter\ContactPresenter.cs" />
+    <Compile Include="Presenter\MainPresenter.cs" />
+    <Compile Include="ViewAbstraction\IBaseView.cs" />
+    <Compile Include="ViewAbstraction\IContactView.cs" />
+    <Compile Include="View\ContactForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainPanel.Designer.cs">
-      <DependentUpon>MainPanel.cs</DependentUpon>
+    <Compile Include="View\ContactForm.Designer.cs">
+      <DependentUpon>ContactForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainWindow.cs">
+    <Compile Include="ViewAbstraction\IMainView.cs" />
+    <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainWindow.Designer.cs">
-      <DependentUpon>MainWindow.cs</DependentUpon>
+    <Compile Include="View\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="MainPanel.resx">
-      <DependentUpon>MainPanel.cs</DependentUpon>
+    <EmbeddedResource Include="View\ContactForm.resx">
+      <DependentUpon>ContactForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainWindow.resx">
-      <DependentUpon>MainWindow.cs</DependentUpon>
+    <EmbeddedResource Include="View\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
